@@ -17,7 +17,6 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -29,7 +28,9 @@ public class CareBotService {
     private final NotificationService notificationService;
     private final MessageRepository messageRepository;
     private final UserClient userClient;
+
     private final MessageService messageService;
+
     private final SafetyAlertLogRepository safetyAlertLogRepository;
     private final MedicationComplianceLogRepository medicationComplianceLogRepository;
 
@@ -61,18 +62,15 @@ public class CareBotService {
         sendMedicationRemindersTo(userClient.getUsersByRole("PATIENT"));
     }
 
-    public void sendMedicationRemindersToAllPatients() {
-        sendMedicationRemindersTo(userClient.getUsersByRole("PATIENT"));
-    }
-
     public boolean sendMedicationReminderToPatient(Long userId) {
         if (userId == null) return false;
         Map<String, Object> user = userClient.getUserById(userId);
         if (!userClient.isRole(user, "PATIENT")) return false;
-        sendMedicationRemindersTo(Collections.singletonList(user));
+        sendMedicationRemindersTo(List.of(user));
         return true;
     }
 
+    
     private void sendMedicationRemindersTo(List<Map<String, Object>> patients) {
         for (Map<String, Object> patient : patients) {
             Long patientId = ((Number) patient.get("id")).longValue();
@@ -84,10 +82,14 @@ public class CareBotService {
         if (userId == null) return false;
         Map<String, Object> patient = userClient.getUserById(userId);
         if (!userClient.isRole(patient, "PATIENT")) return false;
+
+        // Send a warm follow-up message
         String followUp = tookMedication
                 ? "Wonderful! Staying consistent with your medication really helps. I'm proud of you. 💚"
                 : "Thanks for telling me. Please take it when you can. 🤗";
         sendBotPrivateMessage(userId, followUp, MessageType.BOT_MESSAGE);
+
+        // Persist the compliance record for analytics
         MedicationComplianceLog log = new MedicationComplianceLog();
         log.setPatientId(userId);
         log.setTookMedication(tookMedication);
@@ -98,32 +100,55 @@ public class CareBotService {
     public void processMessageForSupport(Message userMsg) {
         if (userMsg.getSenderId() == null) return;
         Map<String, Object> sender = userClient.getUserById(userMsg.getSenderId());
+
         if (userClient.isRole(sender, "PATIENT") && userMsg.getContent() != null) {
             String content = userMsg.getContent().trim();
+
+            // Check 1: disorientation phrases
             if (DISORIENTATION_PATTERN.matcher(content).find()) {
                 handleDisorientation(userMsg, sender);
-                return;
+                return; // don't run other checks after disorientation
             }
+
+            // Check 2: repetitive questions — same message 3+ times in 30 minutes
             Instant thirtyMinsAgo = Instant.now().minusSeconds(1800);
-            List<Message> recent = messageRepository.findBySenderIdAndSentAtAfterOrderBySentAtDesc(userMsg.getSenderId(), thirtyMinsAgo);
+            List<Message> recent = messageRepository.findBySenderIdAndSentAtAfterOrderBySentAtDesc(
+                    userMsg.getSenderId(), thirtyMinsAgo);
             if (recent.size() >= 3) {
                 long count = recent.stream().limit(3)
-                        .filter(m -> m.getContent() != null && m.getContent().trim().equalsIgnoreCase(content)).count();
-                if (count >= 3) logSafetyAlert(userMsg.getSenderId(), SafetyAlertType.REPETITIVE_QUESTIONS, SafetyAlertStatus.OPEN, userMsg.getId());
+                        .filter(m -> m.getContent() != null && m.getContent().trim().equalsIgnoreCase(content))
+                        .count();
+                if (count >= 3) {
+                    logSafetyAlert(userMsg.getSenderId(), SafetyAlertType.REPETITIVE_QUESTIONS,
+                            SafetyAlertStatus.OPEN, userMsg.getId());
+                }
             }
         }
-        if (userMsg.getSentimentScore() != null && userMsg.getSentimentScore() <= -0.2 && userMsg.getSenderId() != null) {
+
+        // Check 3: high distress score (applies to all senders, not just patients)
+        if (userMsg.getSentimentScore() != null && userMsg.getSentimentScore() <= -0.2
+                && userMsg.getSenderId() != null) {
             Map<String, Object> sender2 = userClient.getUserById(userMsg.getSenderId());
-            if (userClient.isRole(sender2, "PATIENT"))
-                logSafetyAlert(userMsg.getSenderId(), SafetyAlertType.HIGH_DISTRESS_SIGNAL, SafetyAlertStatus.OPEN, userMsg.getId());
+            if (userClient.isRole(sender2, "PATIENT")) {
+                logSafetyAlert(userMsg.getSenderId(), SafetyAlertType.HIGH_DISTRESS_SIGNAL,
+                        SafetyAlertStatus.OPEN, userMsg.getId());
+            }
             sendReassurance(userMsg.getSenderId());
         }
     }
 
     private void handleDisorientation(Message userMsg, Map<String, Object> patient) {
         Long patientId = userMsg.getSenderId();
-        logSafetyAlert(patientId, SafetyAlertType.DISORIENTATION, SafetyAlertStatus.CAREGIVERS_NOTIFIED, userMsg.getId());
-        sendBotPrivateMessage(patientId, "It's okay, everything is fine. You are at home. I have notified your family. ❤️");
+
+        // Log the alert
+        logSafetyAlert(patientId, SafetyAlertType.DISORIENTATION,
+                SafetyAlertStatus.CAREGIVERS_NOTIFIED, userMsg.getId());
+
+        // Reassure the patient
+        sendBotPrivateMessage(patientId,
+                "It's okay, everything is fine. You are at home. I have notified your family. ❤️");
+
+        // Alert all caregivers
         String alertMsg = "🚨 URGENT: Patient " + userClient.getFullName(patient) + " seems disoriented.";
         userClient.getAllUsers().stream()
             .filter(u -> userClient.isRole(u, "RELATION") || userClient.isRole(u, "DOCTOR"))
@@ -131,19 +156,16 @@ public class CareBotService {
                 ((Number) caregiver.get("id")).longValue(), alertMsg, "URGENT_DISORIENTATION"));
     }
 
-    private void logSafetyAlert(Long patientId, SafetyAlertType type, SafetyAlertStatus status, String relatedMessageId) {
+    private void logSafetyAlert(Long patientId, SafetyAlertType type,
+                                 SafetyAlertStatus status, String relatedMessageId) {
         SafetyAlertLog log = new SafetyAlertLog();
         log.setPatientId(patientId);
         log.setAlertType(type);
         log.setStatus(status);
-        // store message id as string reference
-        messageRepository.findById(relatedMessageId).ifPresent(m -> {
-            // just save the log — relatedMessageId is a string now but SafetyAlertLog stores Long
-            // we keep it as null since the type mismatch; in a real system you'd change the field type
-        });
         safetyAlertLogRepository.save(log);
     }
 
+    
     private void sendBotPrivateMessage(Long targetUserId, String content) {
         sendBotPrivateMessage(targetUserId, content, MessageType.BOT_MESSAGE);
     }
@@ -151,7 +173,7 @@ public class CareBotService {
     private void sendBotPrivateMessage(Long targetUserId, String content, MessageType type) {
         Message botMsg = new Message();
         botMsg.setContent(content);
-        botMsg.setSenderId(null);
+        botMsg.setSenderId(null); // null senderId = bot message
         botMsg.setReceiverId(targetUserId);
         botMsg.setSentAt(Instant.now());
         botMsg.setType(type != null ? type : MessageType.BOT_MESSAGE);
@@ -162,14 +184,16 @@ public class CareBotService {
 
     public void sendReassurance(Long targetUserId) {
         if (targetUserId == null) return;
-        sendBotPrivateMessage(targetUserId, "Hello! I noticed you might be going through a tough moment. Remember that you're not alone! ❤️");
+        sendBotPrivateMessage(targetUserId,
+                "Hello! I noticed you might be going through a tough moment. Remember that you're not alone! ❤️");
     }
 
     @Scheduled(cron = "0 0 10 * * *")
     public void injectMemoryAnchor() {
         userClient.getUsersByRole("PATIENT").forEach(patient -> {
             Long patientId = ((Number) patient.get("id")).longValue();
-            notificationService.createAndSend(patientId, "CareBot: Time for a memory! Check the feed for a special post.", "MEMORY_ANCHOR");
+            notificationService.createAndSend(patientId,
+                    "CareBot: Time for a memory! Check the feed for a special post.", "MEMORY_ANCHOR");
         });
     }
 }
